# sradb_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/sradb-cli/: Cargo.toml
crates/sradb-cli/src/: cmd.rs  main.rs  output.rs
crates/sradb-cli/src/cmd/: convert.rs  download.rs  geo.rs  id.rs  metadata.rs  search.rs
crates/sradb-core/: Cargo.toml
crates/sradb-core/benches/: parse_experiment_xml.rs  parse_runinfo_csv.rs  parse_sample_attrs.rs
crates/sradb-core/src/: accession.rs  client.rs  convert.rs  download.rs  ena.rs  enrich.rs  error.rs  http.rs  identifier.rs  lib.rs  metadata.rs  model.rs  ngdc.rs  search.rs
crates/sradb-core/src/geo/: matrix.rs  mod.rs
crates/sradb-core/src/ncbi/: efetch.rs  elink.rs  esearch.rs  esummary.rs  gds.rs  mod.rs
crates/sradb-core/src/parse/: ena_filereport.rs  esummary.rs  exp_xml.rs  experiment_package.rs  gds_esummary.rs  mod.rs  runinfo.rs  sample_attrs.rs
crates/sradb-core/tests/: accession_property.rs  client_construction.rs  convert_e2e.rs  download_e2e.rs  enrich_e2e.rs  http_client.rs  id_e2e.rs  live.rs  metadata_detailed_e2e.rs  metadata_e2e.rs  search_e2e.rs
crates/sradb-core/tests/snapshots/: metadata_e2e__metadata_srp174132.snap
crates/sradb-fixtures/: Cargo.toml
crates/sradb-fixtures/src/: lib.rs
docs/: release.md  tutorial.md
docs/superpowers/plans/: 2026-04-25-sradb-rs-slice-1-foundation.md  2026-04-25-sradb-rs-slice-2-metadata.md  2026-04-26-sradb-rs-slice-10-polish.md  2026-04-26-sradb-rs-slice-3-detailed.md  2026-04-26-sradb-rs-slice-4-convert.md  2026-04-26-sradb-rs-slice-5-search.md  2026-04-26-sradb-rs-slice-6-download.md  2026-04-26-sradb-rs-slice-7-geo-matrix.md  2026-04-26-sradb-rs-slice-8-enrich.md  2026-04-26-sradb-rs-slice-9-id-extraction.md
docs/superpowers/specs/: 2026-04-25-sradb-rs-design.md
tests/data/ena/: filereport_SRR8361601.tsv
tests/data/ncbi/: efetch_runinfo_SRP174132.csv  efetch_xml_SRP174132.xml  esearch_SRP174132.json  esummary_SRP174132.xml  gds_esearch_GSE56924.json  gds_esummary_GSE56924.json  gds_esummary_GSM1371490.json
tools/capture-fixtures/: Cargo.toml
tools/capture-fixtures/src/: main.rs
