[workspace]
resolver = "2"
# Members are added incrementally as each foundation task lands.
# Final set: sradb-core, sradb-cli, sradb-fixtures, tools/capture-fixtures.
members = [
    "crates/sradb-core",
    "crates/sradb-cli",
    "crates/sradb-fixtures",
    "tools/capture-fixtures",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/saketkc/pysradb"
authors = ["sradb-rs contributors"]

[workspace.dependencies]
# async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "net", "sync", "io-util"] }
futures = "0.3"

# Note: reqwest 0.12 + reqwest-middleware 0.3 + reqwest-retry 0.6 is a
# coherent set. A coordinated upgrade to reqwest 0.13 + middleware 0.5
# + retry 0.9 is planned but deferred until Task 6 has empirical tests.
# http
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
csv = "1.3"

# error handling
thiserror = "1"
anyhow = "1"

# rate limiting
governor = "0.7"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# misc
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

# cli
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"

# test deps
wiremock = "0.6"
insta = { version = "1.40", features = ["json", "yaml", "redactions"] }
proptest = "1.5"
tokio-test = "0.4"
tempfile = "3.13"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
