[package]
name = "sradb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for sradb-rs."

[lints]
workspace = true

[[bin]]
name = "sradb"
path = "src/main.rs"

[dependencies]
sradb-core = { path = "../sradb-core" }
clap.workspace = true
indicatif.workspace = true
serde_json.workspace = true
tokio = { version = "1.40", features = ["full"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
