[package]
name = "capture-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Dev tool: hits real NCBI/ENA/OpenAI endpoints to capture response fixtures."

[lints]
workspace = true

[[bin]]
name = "capture-fixtures"
path = "src/main.rs"

[dependencies]
sradb-core = { path = "../../crates/sradb-core" }
tokio = { version = "1.40", features = ["full"] }
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
